# Concurent.folders

./: .gitignore  CMakeLists.txt  main
src/: Tree.c  Tree.h  err.c  err.h  main.c  monitor.c  monitor.h  path_utils.c
src/testy-zad2/: CMakeExtension.txt  liveness.c  move_and_remove.c  test.c
